[package]
name = "rspell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "5.0.0"
trying = { version = "0.5", features = [ "serde" ] }
rustyline = "12.0.0"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
